2nd training/Community/Community/Community1/force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>