2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/artAppE2__Create_as_Collector__c.field-meta.xml
<CustomField>
    <fullName>artAppE2__Create_as_Collector__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Add the checkbox to the account page layout for the user to choose if they want to create this account as a collector. Default value is unchecked. To have all accounts created as a collector activate the corresponding workflow rule.</description>
    <inlineHelpText>Will create, update and delete the linked collector</inlineHelpText>
    <label>Create/Manage as Collector</label>
    <type>Checkbox</type>
</CustomField>