2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/artAppE2__IsTriggerDelete__c.field-meta.xml
<CustomField>
    <fullName>artAppE2__IsTriggerDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTriggerDelete</label>
    <type>Checkbox</type>
</CustomField>