2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/ARTIM__c.field-meta.xml
<CustomField>
    <fullName>ARTIM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARTIM</label>
    <type>Checkbox</type>
</CustomField>