2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/AVL__c.field-meta.xml
<CustomField>
    <fullName>AVL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Member of Approved Vendor List</description>
    <inlineHelpText>Member of Approved Vendor List</inlineHelpText>
    <label>AVL</label>
    <type>Checkbox</type>
</CustomField>