2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/Banking_Details__c.field-meta.xml
<CustomField>
    <fullName>Banking_Details__c</fullName>
    <description>Banking Details</description>
    <inlineHelpText>Banking Details</inlineHelpText>
    <label>Banking Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>