2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/Blacklisted__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Blacklisted Account</description>
    <inlineHelpText>Blacklisted Account</inlineHelpText>
    <label>Blacklisted</label>
    <type>Checkbox</type>
</CustomField>