2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/Company_Details__c.field-meta.xml
<CustomField>
    <fullName>Company_Details__c</fullName>
    <description>Company_Details</description>
    <inlineHelpText>Company_Details</inlineHelpText>
    <label>Company Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>