2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/Controlling_Agent__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agent controlling this account.</description>
    <inlineHelpText>Agent controlling this account.</inlineHelpText>
    <label>Controlling Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>