2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/CS_BJ__c.field-meta.xml
<CustomField>
    <fullName>CS_BJ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS BJ</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>