2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/CS_HK__c.field-meta.xml
<CustomField>
    <fullName>CS_HK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS HK</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>