2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/CS_SG__c.field-meta.xml
<CustomField>
    <fullName>CS_SG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS SG</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>