2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/CS_SH__c.field-meta.xml
<CustomField>
    <fullName>CS_SH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS SH</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>