2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/Estimated_No_of_Move_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Estimated_No_of_Move_Per_Year__c</fullName>
    <description>Number of estimated move the business entity has per year.</description>
    <label>Estimated No. of Move Per Year</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>