2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/FIDI__c.field-meta.xml
<CustomField>
    <fullName>FIDI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FIDI</label>
    <type>Checkbox</type>
</CustomField>