2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/GCCS__c.field-meta.xml
<CustomField>
    <fullName>GCCS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>German Chamber of Cpmmerce Singapore</description>
    <label>GCCS</label>
    <type>Checkbox</type>
</CustomField>