2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/HHGFAA__c.field-meta.xml
<CustomField>
    <fullName>HHGFAA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HHGFAA</label>
    <type>Checkbox</type>
</CustomField>