2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/ICEFAT__c.field-meta.xml
<CustomField>
    <fullName>ICEFAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICEFAT</label>
    <type>Checkbox</type>
</CustomField>