2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/Intl_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Intl_Marketing__c</fullName>
    <label>Intl Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KC</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>SH</fullName>
            </value>
            <value>
                <fullName>AH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>