2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/OSKeyID__c.field-meta.xml
<CustomField>
    <fullName>OSKeyID__c</fullName>
    <description>OneSource Key ID</description>
    <label>OSKeyID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>