2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>BD Account Rating System</description>
    <label>BD Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A - Contract</fullName>
            </value>
            <value>
                <fullName>B - Prefer us</fullName>
            </value>
            <value>
                <fullName>C - Competitive Quotes</fullName>
            </value>
            <value>
                <fullName>D - Prefer Vendor</fullName>
            </value>
            <value>
                <fullName>E - Survey (No Jobs)</fullName>
            </value>
            <value>
                <fullName>F - Never use us before</fullName>
            </value>
            <value>
                <fullName>AA - Contract Rates</fullName>
            </value>
            <value>
                <fullName>BB - Prefer us</fullName>
            </value>
            <value>
                <fullName>CC - Competitive Quotes</fullName>
            </value>
            <value>
                <fullName>DD - Prefer others</fullName>
            </value>
            <value>
                <fullName>EE - Quoted but no jobs</fullName>
            </value>
            <value>
                <fullName>FF - Never even quoted before</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>