2nd training/Community/Community/Community1/force-app/main/default/objects/Account/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <defaultValue>&quot;Immediate&quot;</defaultValue>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>