2nd training/Community/Community/Community1/force-app/main/default/objects/Account/recordTypes/Agent_Account.recordType-meta.xml
<RecordType>
    <fullName>Agent_Account</fullName>
    <active>true</active>
    <description>Accounts that are controlled by agents.</description>
    <label>Agent Account</label>
</RecordType>