2nd training/Community/Community/Community1/force-app/main/default/objects/Account/recordTypes/Artmove.recordType-meta.xml
<RecordType>
    <fullName>Artmove</fullName>
    <active>true</active>
    <description>Artmove accounts.</description>
    <label>Artmove</label>
</RecordType>