2nd training/Community/Community/Community1/force-app/main/default/objects/Account/recordTypes/Local_Account.recordType-meta.xml
<RecordType>
    <fullName>Local_Account</fullName>
    <active>true</active>
    <description>Accounts that are locally controlled.</description>
    <label>Local Account</label>
</RecordType>