2nd training/Community/Community/Community1/force-app/main/default/objects/Account/recordTypes/TPR_Account.recordType-meta.xml
<RecordType>
    <fullName>TPR_Account</fullName>
    <active>true</active>
    <description>Accounts that are controlled by third-party relocation companies.</description>
    <label>TPR Account</label>
</RecordType>