2nd training/Community/Community/Community1/force-app/main/default/objects/Account/recordTypes/YH.recordType-meta.xml
<RecordType>
    <fullName>YH</fullName>
    <active>true</active>
    <description>For YH Only</description>
    <label>YH</label>
</RecordType>