2nd training/Community/Community/Community1/force-app/main/default/objects/Account/validationRules/AVL_FIDI.validationRule-meta.xml
<ValidationRule>
    <fullName>AVL_FIDI</fullName>
    <active>true</active>
    <description>FIDI should not be checked with AVL</description>
    <errorConditionFormula>AVL__c = true  &amp;&amp;  FIDI__c  = true</errorConditionFormula>
    <errorDisplayField>FIDI__c</errorDisplayField>
    <errorMessage>FIDI should not be checked with AVL</errorMessage>
</ValidationRule>